# TumProjBack

./: pyproject.toml  udo usermod -aG docker mike
tum_proj/: config.py  constants.py  initiators.py  main.py  models.py  psql_python.py  requests_bodies.py  test_data.py  tutor.txt  variables.py
tum_proj/builders/: build_pull_request_model.py  build_user_model.py
tum_proj/getters/: get_comments_on_pr.py  get_git_page.py  get_last_checked_pr.py  get_list_of_pr.py  get_registration_code.py  get_user.py
tum_proj/models/: get_list_of_pr_models.py  git_models.py  homework_models.py  registration_models.py  user_model.py  validate_for_pr_checked_model.py
tum_proj/processors/: links_processors.py
tum_proj/savers/: save_pr.py
tum_proj/validators/: registration_code_validation.py  registration_validation.py  validate_auth_key.py  validate_past_pr_is_checked.py
